# acornaeology.github.io

./: .gitignore  AUTHORING.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
data/: sources.json
data/nfs/: 3.34.json  meta.json
generator/: build.py  disassembly.py  feed.py  glossary.py  markdown_listing.py
output/: about.html  index.html
output/acorn-nfs/: 3.34.html  index.html
output/css/: style.css
output/nfs/: 3.34.html  index.html
site/: CNAME  humans.txt  index.html  robots.txt
site/css/: style.css
templates/: 404.html  _disassembly.html  _doc.html  _glossary.html  _icons.html  _memory_map.html  _rom_index.html  about.html  base.html  index.html
tests/: conftest.py  test_helpers.py  test_process_disassembly.py  test_process_item.py  test_render_data.py  test_render_text_table.py
