[project]
name = "acornaeology"
version = "0.1.0"
description = "Static site generator for acornaeology.uk"
requires-python = ">=3.10"
dependencies = [
    "jinja2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[project.scripts]
acornaeology-build = "generator.build:main"
