[project]
name = "acornaeology"
version = "0.1.0"
description = "Static site generator for acornaeology.uk"
license = "MIT"
authors = [
    { name = "Robert Smallshire" },
]
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "markdown",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[tool.uv]
index-url = "https://pypi.org/simple"

[project.scripts]
acornaeology-build = "generator.build:main"
